# rftools

./: .gitignore  Cargo.toml  README.md
src/: _splitting.rs  cli.rs  main.rs  split.rs  split_bam.rs  split_fq.rs  split_seq_sum.rs  split_ss.rs
tests/: NA12878_4000_test.bam.bai  test_unblocked.txt
