[package]
name = "rftools"
version = "0.2.0"
authors = ["Alex Payne <alexander.payne@nottingham.ac.uk>", "Rory Munro <rory.munro@nottingham.ac.uk>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
# niffler = { version = "2.4.0", default-features = false, features = ["gz"] }
needletail = { version = "0.4.1", features = ["compression"] }
csv = "1.1"
fnv = "1.0.7"
indicatif = "0.17.7"
noodles = { version = "0.62.1", features = ["bam", "sam", "csi"] }
noodles-bgzf = { version = "0.26.0", features = ["libdeflate"] }
flate2 = { version = "1.0.28", features = ["zlib-ng"] }
